# adventofcode

./: .gitignore  README.md  aoc.cabal  package.yaml  stack.yaml
2015/: Makefile
2015/01/: count.hs  test
2015/02/: area.hs  area.py
2015/03/: deliver.hs  test.py
2015/04/: coins.hs
2015/05/: coins.py  nice.hs
2015/06/: lights.hs  lights.py
2015/07/: wires.py
2015/08/: len.hs  len.py
2015/09/: tsp.hs  tsp.py
2015/10/: say.hs  say.py
2015/11/: passwd.hs
2015/12/: count.hs
2015/13/: happy.hs
2015/14/: race.hs  race.py
2015/15/: cookie.hs  cookie.py
2015/16/: sue.hs  sue.py
2015/17/: eggnog.hs  eggnog.py
2015/18/: conway.hs
2015/20/: elves.hs  elves.py
2015/21/: fight.hs  fight.py
2015/22/: magic.hs  magic.py
2015/23/: cpu.hs  cpu.py
2015/24/: qe.hs  qe.py
2015/25/: code.hs  code.py
2016/01/: distance.hs  distance.py
2016/02/: code.hs  code.py
2016/03/: triangle.hs
2016/04/: room.hs  room.py
2016/06/: rep.hs
2016/07/: README.md  solution1.py
2016/08/: screen.py
2016/10/: bot.py
2016/11/: input2
2016/12/: cpu.hs  cpu.py
2016/13/: maze.py
2016/14/: pad.py
2016/15/: discs.hs
2016/16/: checksum.hs  checksum.py
2016/18/: traps.hs
2016/19/: elves.py
2016/20/: ip.hs  ip.py
2016/21/: scramble.py
2016/22/: df.py
2016/25/: cpu.py
app/: Main.hs
python/2015/: d01.py  d05.py  d06.py  d09.py  d11.py  d12.py  d13.py  d18.py  d19.py
python/2016/: d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d09.py  d11.py  d13.py  d15.py  d16.py  d17.py  d18.py  d23.py  d24.py
src/Y2015/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D18.hs  D19.hs  D20.hs  D21.hs  D22.hs  D23.hs  D24.hs  D25.hs
src/Y2016/: D01.hs  D02.hs  D03.hs  D04.hs  D06.hs  D12.hs  D15.hs  D16.hs  D18.hs  D19.hs  D20.hs
src/Y2017/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs
src/Y2018/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs
src/Y2020/: D01.hs  D02.hs  D03.hs  D05.hs  D06.hs
