name:                advent-of-code
version:             0.1.0.0
synopsis:            Haskell solutions to aoc challenges
description:         Please see README.md
homepage:            https://github.com/tmarsh/adventofcode
license:             BSD3
license-file:        LICENSE
author:              Thomas Marsh
maintainer:          thomas.marsh2@gmail.com
copyright:           2015-2017 Thomas Marsh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Executable             count
  build-depends:       base >= 4.7 && < 5
  main-is:             count.hs
  hs-source-dirs:      2015/01
  default-language:    Haskell2010

Executable             count
  build-depends:       base >= 4.7 && < 5
  main-is:             count.hs
  hs-source-dirs:      2015/01
  default-language:    Haskell2010
