name:                advent-of-code
version:             0.1.0.0
synopsis:            Haskell solutions to aoc challenges
description:         Please see README.md
homepage:            https://github.com/tmarsh/adventofcode
license:             BSD3
license-file:        LICENSE
author:              Thomas Marsh
maintainer:          thomas.marsh2@gmail.com
copyright:           2015-2017 Thomas Marsh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Executable             count
  build-depends:       base >= 4.7 && < 5
  main-is:             count.hs
  hs-source-dirs:      2015/01
  default-language:    Haskell2010

Executable             area
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2
  main-is:             area.hs
  hs-source-dirs:      2015/02
  default-language:    Haskell2010

Executable             deliver
  build-depends:       base >= 4.7 && < 5
  main-is:             deliver.hs
  hs-source-dirs:      2015/03
  default-language:    Haskell2010

Executable             coins
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10,
                       pureMD5 -any
  main-is:             coins.hs
  hs-source-dirs:      2015/04
  default-language:    Haskell2010

Executable             nice
  build-depends:       base >= 4.7 && < 5
  main-is:             nice.hs
  hs-source-dirs:      2015/05
  default-language:    Haskell2010

Executable             lights
  build-depends:       base >= 4.7 && < 5,
                       array >= 0.5,
                       split >= 0.2
  main-is:             lights.hs
  hs-source-dirs:      2015/06
  default-language:    Haskell2010

--Executable             wires
--  build-depends:       base >= 4.7 && < 5
--  main-is:             wires.hs
--  hs-source-dirs:      2015/07
--  default-language:    Haskell2010

Executable             len
  build-depends:       base >= 4.7 && < 5
  main-is:             len.hs
  hs-source-dirs:      2015/08
  default-language:    Haskell2010

Executable             tsp
  build-depends:       base >= 4.7 && < 5,
                       containers -any
  main-is:             tsp.hs
  hs-source-dirs:      2015/09
  default-language:    Haskell2010

Executable             say
  build-depends:       base >= 4.7 && < 5
  main-is:             say.hs
  hs-source-dirs:      2015/10
  default-language:    Haskell2010

Executable             passwd
  build-depends:       base >= 4.7 && < 5,
                       containers -any
  main-is:             passwd.hs
  hs-source-dirs:      2015/11
  default-language:    Haskell2010

Executable             json_count
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 0.11.3,
                       bytestring >= 0.10,
                       unordered-containers -any,
                       scientific -any,
                       vector >= 0.11
  main-is:             count.hs
  hs-source-dirs:      2015/12
  default-language:    Haskell2010

Executable             happy
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2,
                       containers -any
  main-is:             happy.hs
  hs-source-dirs:      2015/13
  default-language:    Haskell2010

Executable             race
  build-depends:       base >= 4.7 && < 5
  main-is:             race.hs
  hs-source-dirs:      2015/14
  default-language:    Haskell2010

Executable             cookie
  build-depends:       base >= 4.7 && < 5
  main-is:             cookie.hs
  hs-source-dirs:      2015/15
  default-language:    Haskell2010

Executable             sue
  build-depends:       base >= 4.7 && < 5,
                       containers -any
  main-is:             sue.hs
  hs-source-dirs:      2015/16
  default-language:    Haskell2010

Executable             eggnog
  build-depends:       base >= 4.7 && < 5
  main-is:             eggnog.hs
  hs-source-dirs:      2015/17
  default-language:    Haskell2010

Executable             conway
  build-depends:       base >= 4.7 && < 5,
                       containers -any
  main-is:             conway.hs
  hs-source-dirs:      2015/18
  default-language:    Haskell2010

Executable             med
  build-depends:       base >= 4.7 && < 5
  main-is:             med.hs
  hs-source-dirs:      2015/19
  default-language:    Haskell2010

Executable             elves
  build-depends:       base >= 4.7 && < 5
  main-is:             elves.hs
  hs-source-dirs:      2015/20
  default-language:    Haskell2010

Executable             fight
  build-depends:       base >= 4.7 && < 5
  main-is:             fight.hs
  hs-source-dirs:      2015/21
  default-language:    Haskell2010

Executable             magic
  build-depends:       base >= 4.7 && < 5,
                       containers -any
  main-is:             magic.hs
  hs-source-dirs:      2015/22
  default-language:    Haskell2010

Executable             cpu
  build-depends:       base >= 4.7 && < 5
  main-is:             cpu.hs
  hs-source-dirs:      2015/23
  default-language:    Haskell2010

Executable             qe
  build-depends:       base >= 4.7 && < 5
  main-is:             qe.hs
  hs-source-dirs:      2015/24
  default-language:    Haskell2010

Executable             code
  build-depends:       base >= 4.7 && < 5
  main-is:             code.hs
  hs-source-dirs:      2015/25
  default-language:    Haskell2010

Executable             triangle
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2
  main-is:             triangle.hs
  hs-source-dirs:      2016/03
  default-language:    Haskell2010

Executable             discs
  build-depends:       base >= 4.7 && < 5
  main-is:             discs.hs
  hs-source-dirs:      2016/15
  default-language:    Haskell2010

Executable             traps
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2
  main-is:             traps.hs
  hs-source-dirs:      2016/18
  default-language:    Haskell2010
